Dump updates from PA codebase
